--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "userAuth",
-  "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "server": "node server.js",
-    "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
-    "build": "node scripts/build.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && cd client && yarn"
-  },
-  "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
-  },
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.1",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "serve-favicon": "^2.5.0"
+    "name": "mern",
+    "version": "1.0.0",
+    "description": "Mern Demo",
+    "main": "server.js",
+    "scripts": {
+      "server": "node server.js",
+      "client": "cd client && npm run start",
+      "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+      "build": "cd client && npm run build",
+      "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "installDeps": "yarn && cd client && yarn"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+      "concurrently": "^3.5.0",
+      "nodemon": "^1.11.0"
+    },
+    "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "bluebird": "^3.5.1",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "jsonwebtoken": "^8.2.1",
+        "mongoose": "^5.1.1",
+        "morgan": "^1.9.0",
+        "passport": "^0.4.0",
+        "passport-jwt": "^4.0.0",
+        "serve-favicon": "^2.5.0"
+    }
   }
-}
+  
