--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,16 @@
     "proxy": "http://localhost:3001/",
     "dependencies": {
         "axios": "^0.18.0",
+        "bootstrap": "^4.1.1",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
         "react-router-dom": "^4.2.2",
-        "react-scripts": "^1.1.4",
-        "bootstrap": "^4.1.1"
-    },
-    "devDependencies": {
-      "axios": "^0.18.0"
+        "react-scripts": "^1.1.4"
     },
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
     }
-  }
-  
+}
