--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react": "^16.3.2",
     "react-scripts": "^1.1.4",
     "serve-favicon": "^2.5.0"
   }
