--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
     "concurrently": "^3.5.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
@@ -31,6 +32,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
     "serve-favicon": "^2.5.0"
   }
