--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
     "name": "mern",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:3001/",
     "dependencies": {
         "axios": "^0.18.0",
         "bootstrap": "^4.1.1",
@@ -16,5 +15,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
-    }
+    },
+    "proxy": "http://localhost:3001/"
 }
